--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg" style="background-image: radial-gradient(circle at -18.3% 31.7%, #FFEDE9 0, #FFEDE9 25%, #CFE2E8 75%, #CFE2E8 75%, #CFE2E8 100%);">
       <div class="container">
-        <a class="navbar-brand" href="Beranda.html">
+        <a class="navbar-brand" href="/CSS/Style.css">
           <img src="assets/logo.png" alt="Logo" width="110" height="60"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="Style.css" />
+    <link rel="stylesheet" href="/CSS/Style.css" />
   </head>
   <body>
     <div class="center-container">
@@ -74,7 +74,7 @@
             placeholder="Masukkan Username"
           />
         </div>
-        <div class="form-group">
+        <div class="form-group"> 
           <input
             type="text"
             class="form-control item"
