--- a/Beranda.html
+++ b/Beranda.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beranda</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="Beranda.css">
+    <link rel="stylesheet" href="/CSS/Beranda.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -45,7 +45,7 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/image/carousels 1.png" class="d-block w-100" alt="Gambar 1">
+            <img src="/assets/carousels 1.png" class="d-block w-100" alt="Gambar 1">
           </div>
           <div class="carousel-item">
             <img src="/image/carousels 2.png" class="d-block w-100" alt="Gambar 2">
