--- a/Beranda.html
+++ b/Beranda.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg" style="background-image: radial-gradient(circle at -18.3% 31.7%, #FFEDE9 0, #FFEDE9 25%, #CFE2E8 75%, #CFE2E8 75%, #CFE2E8 100%);">
       <div class="container">
         <a class="navbar-brand" href="Beranda.html">
-          <img src="/image/logo.png" alt="Logo" width="90" height="60"></a>
+          <img src="/assets/logo.png" alt="Logo" width="90" height="60"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -48,10 +48,10 @@
             <img src="/assets/carousels 1.png" class="d-block w-100" alt="Gambar 1">
           </div>
           <div class="carousel-item">
-            <img src="/image/carousels 2.png" class="d-block w-100" alt="Gambar 2">
+            <img src="/assets/carousels 2.png" class="d-block w-100" alt="Gambar 2">
           </div>
           <div class="carousel-item">
-            <img src="/image/carousels 1.png" class="d-block w-100" alt="Gambar 3">
+            <img src="/assets/carousels 1.png 1.png" class="d-block w-100" alt="Gambar 3">
           </div>
         </div>
       </div>
