--- a/Beranda.html
+++ b/Beranda.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg" style="background-image: radial-gradient(circle at -18.3% 31.7%, #FFEDE9 0, #FFEDE9 25%, #CFE2E8 75%, #CFE2E8 75%, #CFE2E8 100%);">
       <div class="container">
         <a class="navbar-brand" href="Beranda.html">
-          <img src="/image/logo.png" alt="Logo" width="90" height="60"></a>
+          <img src="/assets/logo.png" alt="Logo" width="90" height="60"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
