--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">About Us</a>
+              <a class="nav-link active" href="#">Tentang Kita</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">Explore</a>
