--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
   <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Registrasi</title> 
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="CSS/Style.css" />
+  </head>
+  <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg" style="background-image: radial-gradient(circle at -18.3% 31.7%, #FFEDE9 0, #FFEDE9 25%, #CFE2E8 75%, #CFE2E8 75%, #CFE2E8 100%);">
+    <nav class="navbar navbar-expand-lg fixed-top" style="background-image: radial-gradient(circle at -18.3% 31.7%, #FFEDE9 0, #FFEDE9 25%, #CFE2E8 75%, #CFE2E8 75%, #CFE2E8 100%);">
       <div class="container">
         <a class="navbar-brand" href="Beranda.html">
           <img src="assets/logo.png" alt="Logo" width="110" height="60"></a>
@@ -33,17 +44,6 @@
           </div>
         </div>
       </nav>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Registrasi</title> 
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    />
-    <link rel="stylesheet" href="CSS/Style.css" />
-  </head>
-  <body>
     <div class="center-container">
         <div class="registration-form">
             <form>
