--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top" style="background-image: radial-gradient(circle at -18.3% 31.7%, #FFEDE9 0, #FFEDE9 25%, #CFE2E8 75%, #CFE2E8 75%, #CFE2E8 100%);">
       <div class="container">
-        <a class="navbar-brand" href="Beranda.html">
+        <a class="navbar-brand" href="index.html">
           <img src="assets/logo.png" alt="Logo" width="110" height="60"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -44,7 +44,6 @@
           </div>
         </div>
       </nav>
-    <div class="center-container">
         <div class="registration-form">
             <form>
                 <div class="form-icon">
@@ -52,7 +51,7 @@
                   <span>
                     <img class="picture" src="assets/icon regis.png" alt="car" style="width:50%;max-width:150px">
                 </span>
-                    <div class="box-container">
+                    <div class="box-container">Middle</div> 
                       <div class="box-1">
                         <span></span>
                         <h1>Registrasi</h1> 
