--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <span>
                     <img class="picture" src="assets/icon regis.png" alt="car" style="width:50%;max-width:150px">
                 </span>
-                    <div class="box-container">Middle</div> 
+                    <div class="box-container"> 
                       <div class="box-1">
                         <span></span>
                         <h1>Registrasi</h1> 
