--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registrasi</title> 
     <link
       rel="stylesheet"
@@ -11,52 +11,63 @@
     />
     <link rel="stylesheet" href="CSS/Style.css" />
   </head>
-  <body>
+  <body class="template"></body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top" style="background-image: radial-gradient(circle at -18.3% 31.7%, #FFEDE9 0, #FFEDE9 25%, #CFE2E8 75%, #CFE2E8 75%, #CFE2E8 100%);">
+    <nav class="navbar navbar-expand-lg shadow-sm p-3 mb-5 bg-body-tertiary rounded "style="background-image: radial-gradient(circle at -18.3% 31.7%, #ffede9 0, #ffede9 25%, #cfe2e8 50%, #cfe2e8 75%, #cfe2e8 100%)">
       <div class="container">
-        <a class="navbar-brand" href="index.html">
-          <img src="assets/logo.png" alt="Logo" width="110" height="60"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#home">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#about">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#explore">Explore</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#content">Content & Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#marketplace">Marketplace</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <a class="btn btn-light btn-outline-primary" href="Login.html" role="button">Login</a>
-            </form>
-          </div>
+        <a class="navbar-brand" href="index.html"> <img src="assets/Logo 2.png" alt="Bootstrap" width="110" height="60" /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Tentang Kita</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Explore</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Content & Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Marketplace</a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <a class="btn btn-light btn-outline-primary" href="Login.html" role="button">Login</a>
+          </form>
         </div>
-      </nav>
+      </div>
+    </nav>
+       <!-- Akhir Navbar -->
+
         <div class="registration-form">
             <form>
                 <div class="form-icon">
                   <div id="header"></div>
                   <span>
                     <img class="picture" src="assets/icon regis.png" alt="car" style="width:50%;max-width:150px">
-                </span>
+                  </span>
                     <div class="box-container"> 
+                      <div class="card border-0" style="background:transparent;">
                       <div class="box-1">
                         <span></span>
                         <h1>Registrasi</h1> 
-                    </div>
+                   </div>
                 </div>
+              </div>
         <div class="form-group">
           <input
             type="text"
