--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg shadow-sm p-3 mb-5 bg-body-tertiary rounded fixed-top" style="background-image: radial-gradient(circle at -18.3% 31.7%, #ffede9 0, #ffede9 25%, #cfe2e8 50%, #cfe2e8 75%, #cfe2e8 100%)">
       <div class="container">
-        <a class="navbar-brand" href="index.html"> <img src="assets/Logo 2.png" alt="Bootstrap" width="110" height="60" /></a>
+        <a class="navbar-brand" href="Beranda.html"> <img src="assets/Logo 2.png" alt="Bootstrap" width="110" height="60" /></a>
         <button
           class="navbar-toggler"
           type="button"
