--- a/Beranda.html
+++ b/Beranda.html
@@ -22,7 +22,7 @@
                 <a class="nav-link active" aria-current="page" href="#home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#about">About Us</a>
+                <a class="nav-link active" href="about.html">About Us</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#explore">Explore</a>
