--- a/Detail.html
+++ b/Detail.html
@@ -48,7 +48,7 @@
 
   </body>
 </div>
-<img class="picture" src="assets/Gambar.png" alt="gambar>"
+<img class="picture" src="assets/bg_detailt_ar.png" alt="gambar>"
   <form class="Tahapan">
   <div class="Tahapan-desc">
     <h1>Tahapan Proses Daur Ulang Plastik</h1>
