--- a/Detail.html
+++ b/Detail.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="Detail.css" />
+    <link rel="stylesheet" href="/CSS/Detail.css">
   </head>
   <body>
     <!-- Navbar -->
