--- a/Beranda.html
+++ b/Beranda.html
@@ -45,19 +45,19 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel" data-interval="400">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/assets/carousels 1.png" class="d-block w-100" id="gambar_carousel" alt="Gambar 1">
+            <img src="/assets/carousels 1.png" class="img-fluid d-block w-100" id="gambar_carousel" alt="Gambar 1">
             <div class="carousel-caption">
               <h1><strong>Sampah Tidak Hanya Masalah, Tapi Juga Solusi</strong></h1>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/assets/carousels 2.png" class="d-block w-100" id="gambar_carousel" alt="Gambar 2">
+            <img src="/assets/carousels 2.png" class="img-fluid d-block w-100" id="gambar_carousel" alt="Gambar 2">
             <div class="carousel-caption">
               <h1><strong>Sampah Hari Ini, Bumi Abadi Esok</strong></h1>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/assets/carousels 3.png" class="d-block w-100" id="gambar_carousel" alt="Gambar 3">
+            <img src="/assets/carousels 3.png" class="img-fluid d-block w-100" id="gambar_carousel" alt="Gambar 3">
             <div class="carousel-caption">
               <h1><strong>Mengubah Sampah Menjadi Peluang</strong></h1>
             </div>
