--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="/CSS/about.css">
 </head>
 <body>
         <!-- Navbar -->
@@ -39,6 +40,63 @@
                 </div>
               </div>
             </nav>
-        <!-- Akhir navbar -->
+
+        <!-- gambar utama-->
+        <div class="card">
+          <img src="/assets/gambar_a.png" class="img-fluid"  alt="gambar a" >
+        </div>
+
+        <!-- card 1 -->
+        <div class="card mb-3" style="max-width: 1366;" id="bungkus">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="/assets/gambar_b.png" class="img-fluid" alt="gambar b">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h2 class="card-title"><strong>Selamat Datang di EcoCyle!</strong></h2>
+                <p class="card-text" id="tulisan" >Sebuah perusahaan yang berkomitmen untuk menjaga lingkungan dan planet kita dengan melakukan daur ulang sampah. Kami percaya bahwa daur ulang adalah langkah penting dalam meminimalkan dampak negatif terhadap lingkungan kita, mengurangi limbah, dan menjaga alam kita yang indah.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Text visi misi -->
+        <div id="bungkus2">
+          <h3><strong>Visi Dan Misi</strong></h3>
+          <p>Misi kami adalah untuk menjadi pemimpin dalam industri daur ulang dan membantu menciptakan dunia yang lebih hijau dan berkelanjutan.</p>
+        </div>
+
+        <!-- card 2-->
+        <div class="card-group">
+          <div class="card">
+            <img src="/assets/gambar_c.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"><strong>Mengurangi Dampak Lingkungan</strong></h5><br>
+              <p class="card-text">Kami bertujuan untuk mengurangi dampak negatif terhadap lingkungan dengan memproses dan mendaur ulang sampah secara efisien, mengurangi emisi karbon, dan melindungi sumber daya alam</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="/assets/gambar_d.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"><strong>Komitmen pada Kualitas dan Keamanan</strong></h5><br>
+              <p class="card-text">Kami akan selalu menjaga standar tertinggi dalam kualitas layanan kami serta memastikan keamanan bagi karyawan dan pelanggan kami.</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="/assets/gambar_e.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"><strong>Inovasi Berkelanjutan</strong></h5><br>
+              <p class="card-text">Kami akan terus berinovasi dalam teknologi dan proses daur ulang untuk memastikan keberlanjutan usaha kami dan berkontribusi pada perkembangan teknologi hijau yang lebih baik.</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="/assets/gambar_f.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"><strong>Tanggung Jawab Sosial</strong></h5><br>
+              <p class="card-text">Kami akan berperan aktif dalam komunitas kami dan mendukung inisiatif sosial yang berkontribusi pada kebaikan bersama.</p>
+            </div>
+          </div>
+        </div>
 </body>
 </html>
