--- a/Detail.html
+++ b/Detail.html
@@ -5,55 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Detail Artikel</title> 
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/CSS/Detail.css">
   </head>
   <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg" style="background-image: radial-gradient(circle at -18.3% 31.7%, #FFEDE9 0, #FFEDE9 25%, #CFE2E8 75%, #CFE2E8 75%, #CFE2E8 100%);">
-      <div class="container">
-        <a class="navbar-brand" href="Detail.html">
-          <img src="assets/logo.png" alt="Logo" width="110" height="60"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#home">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#about">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#explore">Explore</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#content">Content & Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#marketplace">Marketplace</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-                <img src="assets/ikon.png" alt="ikon" width="40" height="39"></a>
-            </form>
-          </div>
-        </div>
-      </nav>
-      <!-- Akhir Navbar -->
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg fixed-top" style="background-image: radial-gradient(circle at -18.3% 31.7%, #FFEDE9 0, #FFEDE9 25%, #CFE2E8 75%, #CFE2E8 75%, #CFE2E8 100%);">
+          <div class="container">
+            <a class="navbar-brand" href="about us.html">
+              <img src="/assets/logo.png" alt="Logo" width="100" height="50"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="Beranda.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="about.html">About Us</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="#explore">Explore</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="#content">Content & Blog</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="#marketplace">Marketplace</a>
+                  </li>
+                </ul>
+                <form class="d-flex">
+                  <a href="Profil.html"><img src="/assets/icon profile.png" alt="icon profile"></a>
+                </form>
+              </div>
+            </div>
+          </nav>
 
+      <!-- card -->
+      <div class="card mb-3">
+        <img src="/assets/bg_detailt_ar.png" class="img-fluid" alt="gambar">
+        <div class="card-body">
+          <h5 class="card-title"><strong>Tahapan Proses Daur Ulang Plastik</strong></h5>
+          <p class="card-text">Proses daur ulang sampah dimulai dengan pengumpulan sampah dari berbagai sumber, termasuk rumah tangga, bisnis, dan institusi. Di tahap awal, sampah biasanya dipisahkan berdasarkan jenisnya, seperti organik, kertas, plastik, logam, dan kaca. Setelah itu, di pusat pengumpulan atau fasilitas daur ulang, bahan-bahan ini diperiksa lebih lanjut untuk memisahkan kotoran atau benda asing. Kemudian, tahap pembersihan dilakukan untuk memisahkan bahan-bahan yang tidak dapat didaur ulang atau terkontaminasi. Contohnya, plastik yang tercampur dengan bahan organik akan dipisahkan. Setelah tahap pembersihan, bahan yang sudah bersih akan diolah sesuai jenisnya. Misalnya, plastik akan dicacah atau dilelehkan menjadi bahan mentah. Kertas dan kardus akan diremas dan diubah menjadi serat, sedangkan logam akan dilelehkan dan dicetak ulang. Produk yang dihasilkan dari proses daur ulang ini dapat berupa kembali menjadi produk serupa dengan bentuk awalnya atau dapat digunakan sebagai bahan baku dalam proses produksi lainnya. Proses ini berkontribusi besar dalam mengurangi tekanan pada lingkungan dan sumber daya alam, sambil mempromosikan siklus ekonomi yang lebih berkelanjutan.</p>
+          <p class="card-text">Setelah bahan-bahan telah diproses sesuai jenisnya, tahap berikutnya adalah mengolahnya menjadi bahan baku yang dapat digunakan kembali dalam proses produksi. Plastik yang telah dicacah atau dilelehkan dapat digunakan untuk membuat produk baru, seperti botol plastik atau bahan bangunan daur ulang. Serat yang dihasilkan dari remasan kertas dan kardus dapat digunakan untuk memproduksi kertas baru atau bahan baku tekstil. Logam yang dilelehkan dan dicetak ulang dapat digunakan untuk membuat produk logam baru, seperti kaleng atau alat rumah tangga. Setelah bahan-bahan daur ulang diolah, mereka dapat digunakan langsung atau dikombinasikan dengan bahan baru dalam proses produksi. Dengan melakukan ini, proses daur ulang membantu mengurangi tekanan terhadap sumber daya alam, mengurangi kebutuhan akan ekstraksi bahan mentah baru, dan mengurangi jumlah sampah yang masuk ke tempat pembuangan akhir. Proses ini adalah langkah penting dalam mendorong siklus ekonomi yang lebih berkelanjutan, di mana barang-barang dan material dapat digunakan kembali sebanyak mungkin sebelum akhirnya dibuang. Dengan demikian, daur ulang berperan penting dalam mendukung upaya untuk melestarikan lingkungan dan mengurangi dampak negatif terhadap planet kita.</p><br>
+          <h5 class="card-title" id="title"><strong>Apa itu Daur Ulang Sampah?</strong></h5>
+          <p class="card-text">Daur ulang sampah adalah suatu proses di mana bahan-bahan yang sudah tidak terpakai atau bekas dikumpulkan, diolah, dan diubah menjadi produk atau bahan baku baru yang dapat digunakan kembali dalam produksi. Tujuan utama dari daur ulang adalah mengurangi jumlah sampah yang masuk ke tempat pembuangan akhir, menghemat sumber daya alam, dan mengurangi dampak negatif terhadap lingkungan.Proses daur ulang dimulai dengan pengumpulan sampah dari berbagai sumber, termasuk rumah tangga, bisnis, dan institusi. Sampah kemudian dipilah-pilah berdasarkan jenisnya, seperti organik, kertas, plastik, logam, dan kaca. Pemilahan ini penting karena setiap jenis sampah memiliki karakteristik dan sifat yang berbeda, sehingga memerlukan pendekatan pengolahan yang khusus.</p>
+        </div>
+      </div>
   </body>
-</div>
-<img class="picture" src="assets/bg_detailt_ar.png" alt="gambar>"
-  <form class="Tahapan">
-  <div class="Tahapan-desc">
-    <h1>Tahapan Proses Daur Ulang Plastik</h1>
-    <p>Sampah-sampah yang dihasilkan manusia dapat digunakan kembali melalui sebuah proses daur ulang. Tujuan proses daur ulang itu adalah untuk mengurangi penumpukan sampah di lingkungan.Jenis sampah terbagi menjadi sampah organik dan sampah anorganik. Contoh sampah organik adalah sisa sayur yang tidak dimasak dan kulit buah, sedangkan contoh sampah anorganik adalah plastik, wadah produk, maupun sobekan kertas.Lalu, bagaimana cara daur ulang sampah? Berikut penjelasan lebih lengkapnya.Baca artikel detiknews, "Bagaimana Proses Daur Ulang Sampah? Simak Langkah-langkahnya"</p>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-</div>
-</div>
-</section>
