--- a/autentikasi.html
+++ b/autentikasi.html
@@ -67,6 +67,14 @@
                 </div>
                 <h1 class="text-center">Masukkan Kode autentikasi</h1>
                 <form action="">
+                  <table>
+                    <tr>
+                      <th><input type="text" name="" id="" class="form-control my-4 py-2" min="1" max="1" /></th>
+                      <th><input type="text" name="" id="" class="form-control my-4 py-2" min="1" max="1" /></th>
+                      <th><input type="text" name="" id="" class="form-control my-4 py-2" min="1" max="1" /></th>
+                      <th><input type="text" name="" id="" class="form-control my-4 py-2" min="1" max="1" /></th>
+                    </tr>
+                  </table>
                   <div class="text-center">
                     <button class="btn btn-primary">Kirim</button>
                       <p class="my-1 py-2">Belum Menerima Kode? <a href="#" style="text-decoration: none;">Kirim Ulang Kode</a></p>
