--- a/autentikasi.html
+++ b/autentikasi.html
@@ -67,27 +67,16 @@
                 </div>
                 <h1 class="text-center">Masukkan Kode autentikasi</h1>
                 <form action="">
-<<<<<<< Updated upstream
-                  <table>
-                    <tr>
-                      <th><input type="text" name="" id="" class="form-control my-4 py-2" min="1" max="1" /></th>
-                      <th><input type="text" name="" id="" class="form-control my-4 py-2" min="1" max="1" /></th>
-                      <th><input type="text" name="" id="" class="form-control my-4 py-2" min="1" max="1" /></th>
-                      <th><input type="text" name="" id="" class="form-control my-4 py-2" min="1" max="1" /></th>
-                    </tr>
-                  </table>
-=======
                   <div class="wrapper">
                     <table>
                       <tr>
                         <th> <input type="number" min="1" max="1" name="" id="" class="form-control my-4 py-2" placeholder="" /></th>
-                        <th> <input type="number" name="" id="" class="form-control my-4 py-2" placeholder="" /></th>
-                        <th> <input type="number" name="" id="" class="form-control my-4 py-2" placeholder="" /></th>
-                        <th> <input type="number" name="" id="" class="form-control my-4 py-2" placeholder="" /></th>
+                        <th> <input type="number" min="1" max="1"  name="" id="" class="form-control my-4 py-2" placeholder="" /></th>
+                        <th> <input type="number" min="1" max="1"  name="" id="" class="form-control my-4 py-2" placeholder="" /></th>
+                        <th> <input type="number" min="1" max="1" name="" id="" class="form-control my-4 py-2" placeholder="" /></th>
                       </tr>
                     </table>
                   </div>
->>>>>>> Stashed changes
                   <div class="text-center">
                     <button class="btn btn-primary">Kirim</button>
                       <p class="my-1 py-2">Belum Menerima Kode? <a href="#" style="text-decoration: none;">Kirim Ulang Kode</a></p>
