--- a/InputSampah.html
+++ b/InputSampah.html
@@ -51,15 +51,15 @@
             <div class="card-group">
                 <div class="input-group mb-3">
                   <label>jenis sampah :<br></label>
-                  <input type="text" name="username" id="card1" />
+                  <input type="text" name="jenissampah" id="card1" />
                 </div>
                 <div class="input-group mb-3">
                   <label>jenis sampah :<br></label>
-                  <input type="text" name="username" id="card1" />
+                  <input type="text" name="jenissampah" id="card1" />
                 </div>
                 <div class="input-group mb-3">
                   <label>jenis sampah :</p></label>
-                  <input type="text" name="username" id="card1" />
+                  <input type="text" name="jenissampah" id="card1" />
                 </div>
                 <button  type="button" class="btn btn-primary btn-lg" id="tombol" ><strong><a href="Beranda.html" id="klik">Kirim</a></strong></button>
             </div>
