--- a/autentikasi.html
+++ b/autentikasi.html
@@ -68,18 +68,23 @@
                 <h1 class="text-center">Masukkan Kode autentikasi</h1>
                 <form action="">
                   <div class="wrapper">
-                    <table>
+                    <div class="kotak-kecil"&times><input type="number" min="" max="1" name="" id="" class="form-control my-1 py-2" placeholder="#" /></div>
+                    <div class="kotak-kecil"&times><input type="number" min="" max="1" name="" id="" class="form-control my-1 py-2" placeholder="#" /></div>
+                    <div class="kotak-kecil"&times><input type="number" min="" max="1" name="" id="" class="form-control my-1 py-2" placeholder="#" /></div>
+                    <div class="kotak-kecil"&times><input type="number" min="" max="1" name="" id="" class="form-control my-1 py-2" placeholder="#" /></div>
+                    <!-- <table>
                       <tr>
                         <th> <input type="number" min="1" max="1" name="" id="" class="form-control my-4 py-2" placeholder="" /></th>
-                        <th> <input type="number" min="1" max="1"  name="" id="" class="form-control my-4 py-2" placeholder="" /></th>
-                        <th> <input type="number" min="1" max="1"  name="" id="" class="form-control my-4 py-2" placeholder="" /></th>
+                        <th> <input type="number" min="1" max="1" name="" id="" class="form-control my-4 py-2" placeholder="" /></th>
+                        <th> <input type="number" min="1" max="1" name="" id="" class="form-control my-4 py-2" placeholder="" /></th>
                         <th> <input type="number" min="1" max="1" name="" id="" class="form-control my-4 py-2" placeholder="" /></th>
                       </tr>
-                    </table>
+                    </table> -->
                   </div>
                   <div class="text-center">
-                    <button class="btn btn-primary">Kirim</button>
-                      <p class="my-1 py-2">Belum Menerima Kode? <a href="#" style="text-decoration: none;">Kirim Ulang Kode</a></p>
+                    <!-- <button class="btn btn-primary">Kirim</button> -->
+                      <p class="my-1 py-2">Belum Menerima Kode?</p>
+                      <p> <a href="#" style="text-decoration: none;">Kirim Ulang Kode</a></p>
                     </div>
                 </form>
                 </div>
