--- a/Registrasi.html
+++ b/Registrasi.html
@@ -102,7 +102,7 @@
           />
         </div>
         <div class="form-group">
-          <button type="button" class="btn btn-block daftar">Daftar</button>
+          <button type="button" class="btn btn-block daftar"><a href="autentikasi.html" >Daftar</a></button>
         </div>
       </form>
     </div>
