--- a/login.html
+++ b/login.html
@@ -31,13 +31,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="Beranda.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="about.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Explore</a>
+              <a class="nav-link active" href="InputSampah.html">Explore</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">Content & Blog</a>
