--- a/Detail Video/index.html
+++ b/Detail Video/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-
+    <title>Detail Video</title> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./index.css" />
     <link
@@ -74,30 +75,46 @@
         src="./public/rectangle-285@2x.png"
       />
 
-      <div class="navbar-home2">
-        <div class="logo">
-          <div class="ecocycle">
-            <span>Eco</span>
-            <span class="cycle">Cycle</span>
-          </div>
+       <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg shadow-sm p-3 mb-5 bg-body-tertiary rounded fixed-top" style="background-image: radial-gradient(circle at -18.3% 31.7%, #ffede9 0, #ffede9 25%, #cfe2e8 50%, #cfe2e8 75%, #cfe2e8 100%)">
+      <div class="container">
+        <a class="navbar-brand" href="index.html"> <img src="./public/logo-1@2x.png" alt="Bootstrap" width="110" height="60" /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="about.html">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Explore</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Content & Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Marketplace</a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <a href="Profil.html"><img src="./public/group-95.svg" alt="icon profile"></a>
+          </form>
         </div>
-        <img class="logo-1-icon" alt="" src="./public/logo-1@2x.png" />
-
-        <div class="menu">
-          <div class="home" id="homeText">Home</div>
-          <div class="home" id="aboutUsText">About Us</div>
-          <div class="home" id="exploreText">Explore</div>
-          <div class="home" id="contenBlog">Conten & Blog</div>
-          <div class="home" id="marketplaceText">Marketplace</div>
-        </div>
-        <img
-          class="navbar-home2-child"
-          alt=""
-          src="./public/group-95.svg"
-          id="groupIcon"
-        />
       </div>
-    </div>
+    </nav>
+    <!-- Akhir Navbar -->
 
     <div id="dropDownContainer" class="popup-overlay" style="display: none">
       <div class="dropdown" id="popupdropDownContainer">
