--- a/Detail.html
+++ b/Detail.html
@@ -10,7 +10,7 @@
   </head>
   <body>
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg fixed-top" style="background-image: radial-gradient(circle at -18.3% 31.7%, #FFEDE9 0, #FFEDE9 25%, #CFE2E8 75%, #CFE2E8 75%, #CFE2E8 100%);">
+        <nav class="navbar navbar-expand-lg" style="background-image: radial-gradient(circle at -18.3% 31.7%, #FFEDE9 0, #FFEDE9 25%, #CFE2E8 75%, #CFE2E8 75%, #CFE2E8 100%);">
           <div class="container">
             <a class="navbar-brand" href="about us.html">
               <img src="/assets/logo.png" alt="Logo" width="100" height="50"></a>
