--- a/Detail Video/DetVid.html
+++ b/Detail Video/DetVid.html
@@ -6,7 +6,7 @@
     <title>Detail Video</title> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="DetVid.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
@@ -78,7 +78,7 @@
        <!-- Navbar -->
     <nav class="navbar navbar-expand-lg shadow-sm p-3 mb-5 bg-body-tertiary rounded fixed-top" style="background-image: radial-gradient(circle at -18.3% 31.7%, #ffede9 0, #ffede9 25%, #cfe2e8 50%, #cfe2e8 75%, #cfe2e8 100%)">
       <div class="container">
-        <a class="navbar-brand" href="index.html"> <img src="./public/logo-1@2x.png" alt="Bootstrap" width="110" height="60" /></a>
+        <a class="navbar-brand" href="DetVid.html"> <img src="./public/logo-1@2x.png" alt="Bootstrap" width="110" height="60" /></a>
         <button
           class="navbar-toggler"
           type="button"
