update halama artikel kerajinan

--- a/artikelkerajinan.html
+++ b/artikelkerajinan.html
@@ -56,24 +56,24 @@
             <div class="card-body">
               <h5 class="card-title">Kerajinan Ramah Lingkungan: Kreasi Unik dari Botol Plastik Bekas</h5>
               <p class="card-text">Artikel ini menjelaskan berbagai ide kreatif untuk mengubah botol plastik bekas menjadi kerajinan yang menarik. Anda dapat mencakup langkah-langkah sederhana untuk membuat vas bunga, hiasan taman, atau lampu tidur dari botol plastik yang tidak terpakai. Juga, betapa pentingnya daur ulang botol plastik dalam mengurangi limbah plastik di lingkungan.</p>
-              <button type="button" class="btn btn-primary btn-lg">baca</button>
             </div>
+            <button type="button" class="btn btn-primary btn-lg">Baca</button>
           </div>
           <div class="card">
             <img src="/assets/gambar_2.png" class="card-img-top" alt="gambar">
             <div class="card-body">
               <h5 class="card-title">Kain Bekas yang Menjadi Perhiasan Indah: Kerajinan dari Kain Tidak Terpakai</h5>
               <p class="card-text">Artikel ini membahas cara mengubah potongan-potongan kain bekas menjadi perhiasan yang cantik dan unik. Anda bisa berbicara tentang langkah-langkah sederhana untuk membuat kalung, gelang, atau anting-anting dari kain yang sudah tidak terpakai. Selain itu, tampilkan betapa berartinya upaya daur ulang kain dalam mengurangi limbah tekstil.</p>
-              <button type="button" class="btn btn-primary btn-lg">baca</button>
             </div>
+            <button type="button" class="btn btn-primary btn-lg">Baca</button>
           </div>
           <div class="card">
             <img src="/assets/gambar_3.png" class="card-img-top" alt="gambar">
             <div class="card-body">
               <h5 class="card-title">Seni dari Limbah Elektronik: Kerajinan Daur Ulang Barang Elektronik Lama</h5>
               <p class="card-text">artikel ini berfokuskan pada bagaimana barang elektronik lama yang sudah tidak terpakai dapat diubah menjadi karya seni yang menarik. Anda dapat memberikan inspirasi untuk membuat lampu hias, patung, atau dekorasi dinding dari komponen elektronik bekas. Jelaskan juga pentingnya mendaur ulang perangkat elektronik untuk mengurangi dampak negatifnya pada lingkungan.</p>
-              <button type="button" class="btn btn-primary btn-lg">baca</button>
             </div>
+            <button type="button" class="btn btn-primary btn-lg">Baca</button>
           </div>
         </div>
 </body>
