--- a/Detail Video/DetVid.html
+++ b/Detail Video/DetVid.html
@@ -66,15 +66,18 @@
           serta harga terjangkau. Sekarang baru plastik yang bisa digunakan agar
           bisa mengurangi beban sehingga bisa berjalan lebih lama.
         </p>
+
+        
       </div>
       <img class="detailt-vidio-child" alt="" src="./public/line-13.svg" />
-
-      <img
-        class="detailt-vidio-item"
-        alt=""
-        src="./public/rectangle-285@2x.png"
-      />
-
+       <!-- vidio -->
+       <div class="card-group">  
+      <div class="card">
+          <video width="419" height="1"controls poster="/assets/gambr.png">
+          <source src= "/assets/Vidio1.mp4"type="video/mp4"> 
+          </video>
+        </div>
+      
        <!-- Navbar -->
     <nav class="navbar navbar-expand-lg shadow-sm p-3 mb-5 bg-body-tertiary rounded fixed-top" style="background-image: radial-gradient(circle at -18.3% 31.7%, #ffede9 0, #ffede9 25%, #cfe2e8 50%, #cfe2e8 75%, #cfe2e8 100%)">
       <div class="container">
