--- a/Beranda.html
+++ b/Beranda.html
@@ -25,10 +25,10 @@
                 <a class="nav-link active" href="about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#explore">Explore</a>
+                <a class="nav-link active" href="InputSampah.html">Explore</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#content">Content & Blog</a>
+                <a class="nav-link active" href="a&b.html">Content & Blog</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#marketplace">Marketplace</a>
@@ -71,7 +71,7 @@
           <div class="card">
             <div class="card-body">
               <p class="card-text">Pengolahan sampah rumah tangga tidak harus selalu dilakukan dengan mesin-mesin berteknologi canggih. Anda pun bisa turut mengolah sampah sendiri dengan cara yang sederhana. Sampah rumah tangga bisa diolah menjadi pupuk kompos atau barang-barang daur ulang lainnya yang bermanfaat. Agar tidak penasaran, simak cara mandiri pengolahan sampah rumah tangga ini, yuk!</p><br>
-              <a href="#" class="btn btn-primary" ><strong>Baca</strong></a>
+              <a href="Detail.html" class="btn btn-primary" ><strong>Baca</strong></a>
             </div>
           </div>
         </div>
@@ -79,7 +79,7 @@
           <div class="card">
             <div class="card-body">
               <p class="card-text">Kerajinan sampah adalah proses kreatif mengubah bahan-bahan sampah atau limbah menjadi barang-barang yang berguna atau dekoratif. Ini adalah cara yang efektif untuk mendaur ulang dan mengurangi jumlah sampah yang masuk ke tempat pembuangan akhir, sambil menghasilkan barang-barang yang memiliki nilai estetika atau fungsional.</p><br>
-              <a href="#" class="btn btn-primary"><strong>Baca</strong></a>
+              <a href="Detail.html" class="btn btn-primary"><strong>Baca</strong></a>
             </div>
           </div>
         </div>
