--- a/InputSampah.html
+++ b/InputSampah.html
@@ -25,10 +25,10 @@
                   <a class="nav-link active" href="about.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#explore">Explore</a>
+                  <a class="nav-link active" href="InputSampah.html">Explore</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#content">Content & Blog</a>
+                  <a class="nav-link active" href="a&b.html">Content & Blog</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="#marketplace">Marketplace</a>
@@ -63,7 +63,7 @@
                   <input type="text" name="jenis" id="jenis" />
                   <button type="button" id="tomb" onclick="addForm()">+</button>
                 </div>
-                <button  type="button" class="btn btn-primary btn-lg" id="tombol" onclick="submitForm()" ><strong>Kirim</strong></button>
+                <button  type="button" class="btn btn-primary btn-lg" id="tombol" onclick="submitForm()" ><a href="artikelkerajinan.html" id="kirim"><strong>Kirim</strong></a></button>
               </form>
             </div>
         </div>
