--- a/a&b.html
+++ b/a&b.html
@@ -25,10 +25,10 @@
                   <a class="nav-link active" href="about.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#explore">Explore</a>
+                  <a class="nav-link active" href="InputSampah.html">Explore</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#content">Content & Blog</a>
+                  <a class="nav-link active" href="a&b.html">Content & Blog</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="#marketplace">Marketplace</a>
@@ -78,21 +78,21 @@
               <img src="/assets/gambar_6.png" class="card-img-top" alt="gambar">
               <div class="card-body">
                 <h5 class="card-title">7+ Ide Kerajinan dari Sampah Plastik dan Cara Membuatnya</h5>
-                <p class="card-text">Inovasi kerajinan plastik muncul sebagai solusi terhadap penimbunan limbah plastik di Indonesia. pemanfaatan limbah plastik di tingkat rumah tangga sangat penting. Inovasi-inovasi.<a href="#" id="link">baca selengkapnya...</a></p>
+                <p class="card-text">Inovasi kerajinan plastik muncul sebagai solusi terhadap penimbunan limbah plastik di Indonesia. pemanfaatan limbah plastik di tingkat rumah tangga sangat penting. Inovasi-inovasi.<a href="Detail.html" id="link">baca selengkapnya...</a></p>
               </div>
             </div>
             <div class="card">
               <img src="/assets/gambar_5.png" class="card-img-top" alt="gambar">
               <div class="card-body">
                 <h5 class="card-title">9 Contoh Kerajinan Limbah Keras Anorganik yang Dapat Dibuat dengan Mudah</h5>
-                <p class="card-text">Beberapa limbah keras anorganik berasal dari plastik, pecahan keramik, pecahan kaca, dan potongan logam. Karena tidak mudah diolah, butuh alat dan proses khusus agar limbah bisa berubah jadi aneka pajangan yang menarik.<a href="#" id="link">baca selengkapnya...</a></p>
+                <p class="card-text">Beberapa limbah keras anorganik berasal dari plastik, pecahan keramik, pecahan kaca, dan potongan logam. Karena tidak mudah diolah, butuh alat dan proses khusus agar limbah bisa berubah jadi aneka pajangan yang menarik.<a href="Detail.html" id="link">baca selengkapnya...</a></p>
               </div>
             </div>
             <div class="card">
               <img src="/assets/gambar_7.png" class="card-img-top" alt="gambar">
               <div class="card-body">
                 <h5 class="card-title">Tahapan Proses Daur Ulang Plastik</h5>
-                <p class="card-text">Mengingat plastik menjadi salah satu masalah yang signifikan bagi lingkungan dan dapat mengancam kehidupan makhluk hidup dan membutuhkan ratusan tahun untuk terurai.<a href="#" id="link">baca selengkapnya...</a></p>
+                <p class="card-text">Mengingat plastik menjadi salah satu masalah yang signifikan bagi lingkungan dan dapat mengancam kehidupan makhluk hidup dan membutuhkan ratusan tahun untuk terurai.<a href="Detail.html" id="link">baca selengkapnya...</a></p>
               </div>
             </div>
           </div>
