--- a/artikelkerajinan.html
+++ b/artikelkerajinan.html
@@ -25,10 +25,10 @@
                   <a class="nav-link active" href="about.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#explore">Explore</a>
+                  <a class="nav-link active" href="InputSampah.html">Explore</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#content">Content & Blog</a>
+                  <a class="nav-link active" href="a&b.html">Content & Blog</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="#marketplace">Marketplace</a>
