--- a/Detail.html
+++ b/Detail.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Detail Artikel</title> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/CSS/Detail.css">
   </head>
   <body>
@@ -36,7 +37,27 @@
                   </li>
                 </ul>
                 <form class="d-flex">
-                  <a href="Profil.html"><img src="/assets/icon profile.png" alt="icon profile"></a>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Launch demo modal</button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                  
                 </form>
               </div>
             </div>
@@ -52,5 +73,7 @@
           <h5 class="card-title" id="title"><strong>Apa itu Daur Ulang Sampah?</strong></h5>
           <p class="card-text">Daur ulang sampah adalah suatu proses di mana bahan-bahan yang sudah tidak terpakai atau bekas dikumpulkan, diolah, dan diubah menjadi produk atau bahan baku baru yang dapat digunakan kembali dalam produksi. Tujuan utama dari daur ulang adalah mengurangi jumlah sampah yang masuk ke tempat pembuangan akhir, menghemat sumber daya alam, dan mengurangi dampak negatif terhadap lingkungan.Proses daur ulang dimulai dengan pengumpulan sampah dari berbagai sumber, termasuk rumah tangga, bisnis, dan institusi. Sampah kemudian dipilah-pilah berdasarkan jenisnya, seperti organik, kertas, plastik, logam, dan kaca. Pemilahan ini penting karena setiap jenis sampah memiliki karakteristik dan sifat yang berbeda, sehingga memerlukan pendekatan pengolahan yang khusus.</p>
         </div>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
       </div>
   </body>
