--- a/a&b.html
+++ b/a&b.html
@@ -35,7 +35,7 @@
                 </li>
               </ul>
               <form class="d-flex">
-                <a href="Profil.html"><img src="/assets/icon profile.png" alt="icon profile"></a>
+                <a href="#"><img src="/assets/icon profile.png" alt="icon profile"></a>
               </form>
             </div>
           </div>
