--- a/autentikasi.html
+++ b/autentikasi.html
@@ -82,9 +82,9 @@
                     </table> -->
                   </div>
                   <div class="text-center">
-                    <!-- <button class="btn btn-primary">Kirim</button> -->
                       <p class="my-1 py-2">Belum Menerima Kode?</p>
                       <p> <a href="#" style="text-decoration: none;">Kirim Ulang Kode</a></p>
+                      <a href="Beranda.html" class="btn btn-primary btn-lg">Kirim</a>
                     </div>
                 </form>
                 </div>
