--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                       <a class="nav-link active" href="a&b.html">Content & Blog</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link active" href="#marketplace">Marketplace</a>
+                      <a class="nav-link active" href="marketplace.html">Marketplace</a>
                     </li>
                   </ul>
                   <form class="d-flex">
