--- a/marketplace.html
+++ b/marketplace.html
@@ -3,9 +3,200 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Marketplace</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="/CSS/marketplace.css">
 </head>
 <body>
-    <p>Hello Word</p>
+    <header>
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg fixed-top" style="background-image: radial-gradient(circle at -18.3% 31.7%, #FFEDE9 0, #FFEDE9 25%, #CFE2E8 75%, #CFE2E8 75%, #CFE2E8 100%);">
+            <div class="container">
+              <a class="navbar-brand" href="about us.html">
+                <img src="/assets/logo.png" alt="Logo" width="100" height="50"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="Beranda.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" href="about.html">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" href="InputSampah.html">Explore</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" href="a&b.html">Content & Blog</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" href="marketplace.html">Marketplace</a>
+                    </li>
+                  </ul>
+                  <form class="d-flex">
+
+                    <!-- Button triger -->
+                    <button type="button" class="btn btn-primary" id="btnprofile" data-bs-toggle="modal" data-bs-target="#exampleModal">Profile</button>
+
+                    <!-- pop up content -->
+
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                          <div class="modal-content">
+                            <div class="modal-header">
+      
+                              <div class="kertas">
+                              <a href="Detail.html" id="keluar"><img src="/assets/MacOS Close.png" alt="close"></a>
+                              <img id="gambarmr" src="/assets/mrbi.png" alt="icon" >
+                              <div class="satu">
+                                <p class="selamat-datang">Selamat Datang,</p>
+                                <p class="selamat-datang2">MR. Be</p>
+                              </div>
+                                <div class="kelola">
+                                  <button><img id="icon" src="/assets/Male User.png" alt="icon" ><a href="profile.html" id="text1">Kelola akun anda</a></button>
+                                </div>
+                                <div class="kelola">
+                                  <button><img id="icon2" src="/assets/Logout Rounded.png" alt="icon" ><a href="profile.html" id="text2">Keluar</a></button>
+                                </div>
+                              </div>
+                            </div>
+                            </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                  </form>
+                </div>
+              </div>
+            </nav>
+    </header>
+    <main>
+
+        <!-- categori -->
+        <div class="kotak1">
+            <div class="kotak2">
+            <h3>CATEGORIES</h3>
+            <p>Lokasi :</p>
+            <ul>
+                <li>jabobetabek</li>
+                <li>jawa timur</li>
+                <li>jawa tengah</li>
+                <li>jawa barat</li>
+            <ul>
+
+            <hr>
+            <p>Penilayan :</p>
+            <ul>
+                <li>bintang 1</li>
+                <li>bintang 2</li>
+                <li>bintang 3</li>
+                <li>bintang 4</li>
+                <li>bintang 5</li>
+            </ul>
+
+            <hr>
+            <p>Promo :</p>
+            <ul>
+                <li>Gratis ongkir</li>
+                <li>Casback extra</li>
+            </ul>
+
+            <hr>
+            <p>Kategori barang :</p>
+            <ul>
+                <li>Hiasan rumah</li>
+                <li>patung</li>
+                <li>Fashion</li>
+                <li>Peralatan rumah</li>
+            </ul>
+
+        </div>
+        </div>
+
+        <!-- content 1-->
+        <div class="row row-cols-1 row-cols-md-2 g-4" id="kertas1">
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+    </main>
+    <footer>
+        <!-- Isi informasi kontak disini -->
+    </footer>
 </body>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </html>
